DataToDeploy/objects/Category__c.object
<CustomObject>
    <label>Category</label>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>creationAt__c</fullName>
        <label>creationAt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>image__c</fullName>
        <label>image</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <label>name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>updatedAt__c</fullName>
        <label>updatedAt</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>